--- a/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
+++ b/ZHA Philips Hue Dimmer Switch (RWL022) (Scene Peset).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer Switch (Scene Preset). Version: 2.1.12"
+  name: "MQTT Philips Hue Dimmer Switch (Scene Preset). Version: 2.2.0"
   description: >
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -9,17 +9,17 @@ blueprint:
       description: Select the action sensor of your Philips Hue Dimmer Switch
       selector:
         entity:
-          domain: sensor
           filter:
             - integration: mqtt
+            - domain: event
           multiple: false
     light:
       name: Lights
       description: The lights to control
       selector:
         entity:
-          domain:
-            - light
+          filter:
+            - domain: light
           multiple: true
     tv_entity:
       name: TV Entity
@@ -27,8 +27,9 @@ blueprint:
       default: ""
       selector:
         entity:
-          domain:
-            - media_player
+          filter:
+            domain:
+              - media_player
           multiple: false
     lights_when_tv_on:
       name: Lights When TV On
@@ -36,8 +37,9 @@ blueprint:
       default: []
       selector:
         entity:
-          domain:
-            - light
+          filter:
+            domain:
+              - light
           multiple: true
     included_scenes:
       name: Hue Button Scenes
@@ -194,8 +196,9 @@ blueprint:
       description: Please select an Input Text Helper to be used to record the scene sequence in JSON format with timestamp.
       selector:
         entity:
-          domain:
-            - input_text
+          filter:
+            domain:
+              - input_text
           multiple: false
     transition_time:
       name: Transition Time
@@ -238,14 +241,14 @@ blueprint:
         time:
 mode: queued
 max_exceeded: silent
-trigger:
-  - platform: state
+triggers:
+  - trigger: state
     entity_id: !input dimmer_switch
-    id: dimmer_action
+    to: ~
 
 action:
   - variables:
-      command: "{{ trigger.to_state.state }}"
+      command: "{{ trigger.to_state.attributes.event_type }}"
       included_scenes: !input included_scenes
       scene_helper: !input scene_helper
       reset_after: !input reset_after
@@ -301,7 +304,7 @@ action:
       - conditions:
           - "{{ lights_to_turn_off | length > 0 }}"
         sequence:
-          - service: light.turn_off
+          - action: light.turn_off
             target:
               entity_id: "{{ lights_to_turn_off }}"
             data:
@@ -310,7 +313,7 @@ action:
       - conditions:
           - "{{ command == 'tv_on' }}"
         sequence:
-          - service: light.turn_off
+          - action: light.turn_off
             target:
               entity_id: "{{ lights_to_turn_off }}"
             data:
@@ -321,7 +324,7 @@ action:
           - choose:
               - conditions: "{{ target_lights | length > 0 and expand(target_lights) | selectattr('state', 'eq', 'on') | list | length == 0 }}"
                 sequence:
-                  - service: scene_presets.apply_preset
+                  - action: scene_presets.apply_preset
                     data:
                       preset_id: "{{ (included_scenes[0] | from_json).preset_id if included_scenes else '' }}"
                       targets:
@@ -330,26 +333,26 @@ action:
                       smart_shuffle: false
               - conditions: "{{ target_lights | length > 0 and expand(target_lights) | selectattr('state', 'eq', 'on') | list | length > 0 }}"
                 sequence:
-                  - service: light.turn_off
+                  - action: light.turn_off
                     target:
                       entity_id: "{{ target_lights }}"
                     data:
                       transition: !input transition_time
-                  - service: scene_presets.stop_dynamic_scenes_for_targets
+                  - action: scene_presets.stop_dynamic_scenes_for_targets
                     data:
                       targets:
                         entity_id: "{{ target_lights }}"
       - conditions:
           - "{{ command == 'on_hold' }}"
         sequence:
-          - service: scene_presets.stop_dynamic_scenes_for_targets
+          - action: scene_presets.stop_dynamic_scenes_for_targets
             data:
               targets:
                 entity_id: "{{ target_lights }}"
           - choose:
               - conditions: "{{ (included_scenes[0] | from_json).type == 'static' }}"
                 sequence:
-                  - service: scene_presets.apply_preset
+                  - action: scene_presets.apply_preset
                     data:
                       preset_id: "{{ (included_scenes[0] | from_json).preset_id }}"
                       targets:
@@ -358,7 +361,7 @@ action:
                       smart_shuffle: false
               - conditions: "{{ (included_scenes[0] | from_json).type == 'dynamic' }}"
                 sequence:
-                  - service: scene_presets.start_dynamic_scene
+                  - action: scene_presets.start_dynamic_scene
                     data:
                       preset_id: "{{ (included_scenes[0] | from_json).preset_id }}"
                       targets:
@@ -371,7 +374,7 @@ action:
           - choose:
               - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255 - hold_press_change) | list | length > 0 }}"
                 sequence:
-                  - service: light.turn_on
+                  - action: light.turn_on
                     target:
                       entity_id:
                         "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
@@ -381,7 +384,7 @@ action:
                       transition: !input transition_time
               - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gte', 255 - hold_press_change) | list | length > 0 }}"
                 sequence:
-                  - service: light.turn_on
+                  - action: light.turn_on
                     target:
                       entity_id:
                         "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
@@ -395,7 +398,7 @@ action:
           - choose:
               - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gt', hold_press_change) | list | length > 0 }}"
                 sequence:
-                  - service: light.turn_on
+                  - action: light.turn_on
                     target:
                       entity_id:
                         "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
@@ -405,7 +408,7 @@ action:
                       transition: !input transition_time
               - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'le', hold_press_change) | list | length > 0 }}"
                 sequence:
-                  - service: light.turn_on
+                  - action: light.turn_on
                     target:
                       entity_id:
                         "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
@@ -415,14 +418,14 @@ action:
                       transition: !input transition_time
       - conditions: "{{ command == 'off_press' }}"
         sequence:
-          - service: scene_presets.stop_dynamic_scenes_for_targets
+          - action: scene_presets.stop_dynamic_scenes_for_targets
             data:
               targets:
                 entity_id: "{{ target_lights }}"
           - choose:
               - conditions: "{{ (included_scenes[current_preset] | from_json).type == 'static' }}"
                 sequence:
-                  - service: scene_presets.apply_preset
+                  - action: scene_presets.apply_preset
                     data:
                       preset_id: "{{ (included_scenes[current_preset] | from_json).preset_id }}"
                       targets:
@@ -431,14 +434,14 @@ action:
                       smart_shuffle: false
               - conditions: "{{ (included_scenes[current_preset] | from_json).type == 'dynamic' }}"
                 sequence:
-                  - service: scene_presets.start_dynamic_scene
+                  - action: scene_presets.start_dynamic_scene
                     data:
                       preset_id: "{{ (included_scenes[current_preset] | from_json).preset_id }}"
                       targets:
                         entity_id: "{{ target_lights }}"
                       transition: !input dynamic_transition
                       interval: !input dynamic_interval
-          - service: input_text.set_value
+          - action: input_text.set_value
             target:
               entity_id: !input scene_helper
             data:
