--- a/ZHA IKEA Tradfri on-off Switch (Scene Preset).yaml
+++ b/ZHA IKEA Tradfri on-off Switch (Scene Preset).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT IKEA Tradfri on/off Switch (Scene Preset) v1.0.0
+  name: MQTT IKEA Tradfri on/off Switch (Scene Preset) v0.1.1
   description: Control lights with a IKEA Tradfri on/off Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
   input:
@@ -8,9 +8,9 @@ blueprint:
       description: The dimmer switch to use
       selector:
         entity:
+          domain: sensor
           filter:
             - integration: mqtt
-            - domain: event
           multiple: false
     light:
       name: Lights
@@ -172,8 +172,8 @@ blueprint:
           mode: slider
 mode: restart
 max_exceeded: silent
-triggers:
-  - trigger: state
+trigger:
+  - platform: state
     entity_id: !input dimmer_switch
 action:
   - variables:
@@ -197,14 +197,14 @@ action:
   - choose:
       - conditions: "{{ command == 'on' }}"
         sequence:
-          - action: scene_presets.stop_dynamic_scenes_for_targets
+          - service: scene_presets.stop_dynamic_scenes_for_targets
             data:
               targets:
                 entity_id: !input light
           - choose:
               - conditions: "{{ (included_scenes[current_preset] | from_json).type == 'static' }}"
                 sequence:
-                  - action: scene_presets.apply_preset
+                  - service: scene_presets.apply_preset
                     data:
                       preset_id: "{{ (included_scenes[current_preset] | from_json).preset_id }}"
                       targets:
@@ -213,14 +213,14 @@ action:
                       smart_shuffle: false
               - conditions: "{{ (included_scenes[current_preset] | from_json).type == 'dynamic' }}"
                 sequence:
-                  - action: scene_presets.start_dynamic_scene
+                  - service: scene_presets.start_dynamic_scene
                     data:
                       preset_id: "{{ (included_scenes[current_preset] | from_json).preset_id }}"
                       targets:
                         entity_id: !input light
                       transition: !input dynamic_transition
                       interval: !input dynamic_interval
-          - action: input_text.set_value
+          - service: input_text.set_value
             target:
               entity_id: !input scene_helper
             data:
@@ -229,12 +229,12 @@ action:
       - conditions:
           - "{{ command == 'off' }}"
         sequence:
-          - action: light.turn_off
+          - service: light.turn_off
             target:
               entity_id: !input light
             data:
               transition: !input transition_time
-          - action: scene_presets.stop_dynamic_scenes_for_targets
+          - service: scene_presets.stop_dynamic_scenes_for_targets
             data:
               targets:
                 entity_id: !input light
@@ -249,7 +249,7 @@ action:
                 - choose:
                     - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255 - hold_press_change) | list | length > 0 }}"
                       sequence:
-                        - action: light.turn_on
+                        - service: light.turn_on
                           target:
                             entity_id:
                               "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
@@ -259,7 +259,7 @@ action:
                             transition: !input transition_time
                     - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gte', 255 - hold_press_change) | list | length > 0 }}"
                       sequence:
-                        - action: light.turn_on
+                        - service: light.turn_on
                           target:
                             entity_id:
                               "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
@@ -280,7 +280,7 @@ action:
                 - choose:
                     - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gt', hold_press_change) | list | length > 0 }}"
                       sequence:
-                        - action: light.turn_on
+                        - service: light.turn_on
                           target:
                             entity_id:
                               "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
@@ -290,7 +290,7 @@ action:
                             transition: !input transition_time
                     - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'le', hold_press_change) | list | length > 0 }}"
                       sequence:
-                        - action: light.turn_on
+                        - service: light.turn_on
                           target:
                             entity_id:
                               "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
