--- a/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
+++ b/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
@@ -175,17 +175,6 @@ action:
                       brightness_pct: 100
                       transition: !input transition_time
 
-      - conditions: "{{ command == 'up_double_press' }}"
-        sequence:
-          - service: light.turn_on
-            target:
-              entity_id:
-                "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                | map(attribute='entity_id') | list }}"
-            data:
-              brightness_pct: 100
-              transition: !input transition_time
-
       - conditions:
           - "{{ command == 'down_hold' or command == 'down_press' }}"
         sequence:
@@ -217,17 +206,6 @@ action:
                       brightness_pct: 1
                       transition: !input transition_time
 
-      - conditions: "{{ command == 'down_double_press' }}"
-        sequence:
-          - service: light.turn_on
-            target:
-              entity_id:
-                "{{ expand(target_lights) | selectattr('state', 'eq', 'on')
-                | map(attribute='entity_id') | list }}"
-            data:
-              brightness_pct: 1
-              transition: !input transition_time
-
       - conditions: "{{ command == 'off_press' }}"
         sequence:
           - choose:
@@ -245,9 +223,13 @@ action:
                       entity_id: !input light
                     data:
                       transition: !input transition_time
-
-      - conditions: "{{ command == 'off_double_press' }}"
+      - conditions: "{{ command == 'off_hold' }}"
         sequence:
           - service: scene.turn_on
             target:
               entity_id: !input aux_scene_off
+      - conditions: "{{ command == 'on_hold' }}"
+        sequence:
+          - service: scene.turn_on
+            target:
+              entity_id: !input aux_scene_on
