--- a/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
+++ b/ZHA Philips Hue Dimmer Switch V1 (RWL020).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT Philips Hue Dimmer Switch (RWL020) v2.2.4
+  name: MQTT Philips Hue Dimmer Switch (RWL020) v2.2.7
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
@@ -206,8 +206,12 @@ action:
           - service: scene.turn_on
             target:
               entity_id: !input aux_scene_off
+            data:
+              transition: !input transition_time
       - conditions: "{{ command == 'on_hold' }}"
         sequence:
           - service: scene.turn_on
             target:
               entity_id: !input aux_scene_on
+            data:
+              transition: !input transition_time
