--- a/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
+++ b/ZHA Philips Hue Dimmer Switch V2 (RWL022).yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: MQTT Philips Hue Dimmer Switch (RWL022) v.2.5.6
+  name: MQTT Philips Hue Dimmer Switch (RWL022) v.2.5.7
   description: Control lights with a Philips Hue Dimmer Switch
   domain: automation
   input:
@@ -216,8 +216,12 @@ action:
           - service: scene.turn_on
             target:
               entity_id: !input aux_scene_off
+            data:
+              transition: !input transition_time
       - conditions: "{{ command == 'on_hold' }}"
         sequence:
           - service: scene.turn_on
             target:
               entity_id: !input aux_scene_on
+            data:
+              transition: !input transition_time
