--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.0.1"
+  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.1.0"
   description: >-
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -235,6 +235,12 @@ blueprint:
       default: ""
       selector:
         time:
+    brightness_zigbee:
+      name: Brightness Control via Zigbee2MQTT
+      description: If enabled, brightness will be controlled directly by Zigbee2MQTT instead of the blueprint
+      default: false
+      selector:
+        boolean:
 mode: queued
 max_exceeded: silent
 trigger:
@@ -394,6 +400,7 @@ action:
                       interval: !input dynamic_interval
       - conditions:
           - "{{ command == 'up_hold' or command == 'up_press'}}"
+          - "{{ not (brightness_zigbee | default(false)) }}"
         sequence:
           - choose:
               - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'lt', 255 - hold_press_change) | list | length > 0 }}"
@@ -418,6 +425,7 @@ action:
                       transition: !input transition_time
       - conditions:
           - "{{ command == 'down_hold' or command == 'down_press' }}"
+          - "{{ not (brightness_zigbee | default(false)) }}"
         sequence:
           - choose:
               - conditions: "{{ expand(target_lights) | selectattr('state', 'eq', 'on') | selectattr('attributes.brightness', 'gt', hold_press_change) | list | length > 0 }}"
