--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.1.0"
+  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.1.1"
   description: >-
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -283,6 +283,7 @@ variables:
   tv_entity: !input tv_entity
   lights_when_tv_on: !input lights_when_tv_on
   all_lights: !input light
+  brightness_zigbee: !input brightness_zigbee
   tv_time_start: !input tv_time_start
   tv_time_end: "03:00"
   is_tv_time: >
