Update MQTT Philips Hue Dimmer RWL022 blueprint to version 3.1.3. This release changes the 'show_if' condition to 'enabled' for the hold press change feature, ensuring that the feature is correctly activated based on the brightness control state. This adjustment enhances the clarity and functionality of the integration.

--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -217,7 +217,7 @@ blueprint:
       name: Hold Press Change
       description: Transition step between changes of the light state (appied on ON/OFF/+/-)
       default: 18
-      show_if: "{{ not brightness_zigbee }}"
+      enabled: "{{ not brightness_zigbee }}"
       selector:
         number:
           min: 0.0
