Update MQTT Philips Hue Dimmer RWL022 blueprint to version 3.1.4. This release modifies action triggers by changing 'on_press' to 'on_press_release' and 'on_hold' to 'on_hold_release', enhancing the clarity and responsiveness of the integration. These adjustments ensure that the dimmer switch actions are more accurately represented in the configuration.

--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -248,13 +248,13 @@ trigger:
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
-    subtype: on_press
+    subtype: on_press_release
     id: on_press
   - trigger: device
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
-    subtype: on_hold
+    subtype: on_hold_release
     id: on_hold
   - trigger: device
     domain: mqtt
