--- a/z2m-rwl022.yaml
+++ b/z2m-rwl022.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.1.2"
+  name: "MQTT Philips Hue Dimmer RWL022 (Scene Preset Integration). v3.1.3"
   description: >-
     Control lights with a Philips Hue Dimmer Switch. Scene Preset integration is required https://github.com/Hypfer/hass-scene_presets
   domain: automation
@@ -254,7 +254,7 @@ trigger:
     domain: mqtt
     device_id: !input dimmer_switch
     type: action
-    subtype: on_hold_release
+    subtype: on_hold
     id: on_hold
   - trigger: device
     domain: mqtt
